Add Off-Pay branch with client-side updates

--- a/client-side/otp.html
+++ b/client-side/otp.html
@@ -26,9 +26,12 @@
                     <input type="text" maxlength="1" class="otp-box" data-index="5">
                 </div>
 
-                <div class="info-box">
+                <!-- <div class="info-box">
                     <p>💡 Demo: Enter any 6-digit OTP (e.g., 123456)</p>
-                </div>
+                </div> -->
+                <div class="info-box">
+    <p>💡OTP: <strong id="otpHint"></strong></p>
+</div>
 
                 <button type="submit" class="btn btn-primary btn-full">
                     Verify OTP
