--- a/client-side/pay.html
+++ b/client-side/pay.html
@@ -27,7 +27,7 @@
                     >
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label>Amount (Max ₹10,000)</label>
                     <div class="amount-input-wrapper">
                         <span class="currency-symbol">₹</span>
@@ -39,7 +39,19 @@
                             step="0.01"
                         >
                     </div>
-                </div>
+                </div> -->
+
+                <div class="amount-card">
+    <span class="currency">₹</span>
+    <input 
+        type="number" 
+        id="amount" 
+        placeholder="0"
+        max="10000"
+    >
+    <p class="amount-hint">Available via USSD • Max ₹10,000</p>
+</div>
+
 
                 <div class="quick-amounts">
                     <button class="quick-amt-btn" onclick="setAmount(100)">+₹100</button>
