--- a/client-side/home.html
+++ b/client-side/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Offline Pay</title>
+    <title>Home - Off-Pay</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/paytm-ui.css">
 </head>
@@ -11,10 +11,11 @@
     <div class="screen active">
         <div class="header">
             <div class="header-top">
-                <h1>Offline Pay</h1>
-                <button class="logout-btn" onclick="logout()">
-                    <span>LogOut🚪</span>
+                <h1>Off-Pay</h1>
+                <button class="logout-btn" onclick="logout()" title="Logout">
+                    ⎋
                 </button>
+
             </div>
             <p class="welcome-text">Welcome, <span id="userName">User</span></p>
         </div>
@@ -72,7 +73,7 @@
 
         <div class="action-buttons">
             <a href="pay.html" class="btn btn-primary">
-                <span class="btn-icon">📤</span>
+                <span class="btn-icon">➤</span>
                 <span>Send Money</span>
             </a>
             <a href="receive.html" class="btn btn-secondary">
@@ -80,7 +81,7 @@
                 <span>Receive Money</span>
             </a>
             <button class="btn btn-secondary" onclick="checkBalance()">
-        <span class="btn-icon">💰</span>
+        <span class="btn-icon">🏦</span>
         <span>Check Balance</span>
     </button>
         </div>
@@ -105,6 +106,18 @@
     <script src="js/api.js"></script>
     <script src="js/auth.js"></script>
     <script>
+        function formatDateTime(value) {
+    const date = new Date(value);
+    return date.toLocaleString("en-IN", {
+        day: "2-digit",
+        month: "short",
+        year: "numeric",
+        hour: "2-digit",
+        minute: "2-digit",
+        hour12: true
+    });
+}
+
         let hideTimer = null;
 
 function checkBalance() {
@@ -317,20 +330,38 @@ function hideBalance() {
                         const isSent = txn.sender === mobile;
                         const statusIcon = txn.status === 'SUCCESS' ? '✅' : txn.status === 'FAILED' ? '❌' : '⏳';
                         
-                        return `
-                            <div class="transaction-item ${txn.status.toLowerCase()}">
-                                <div class="txn-left">
-                                    <span class="txn-type">${isSent ? '📤 Sent' : '📥 Received'}</span>
-                                    <span class="txn-party">${isSent ? txn.receiver : txn.sender}</span>
-                                </div>
-                                <div class="txn-right">
-                                    <span class="txn-amount ${isSent ? 'debit' : 'credit'}">
-                                        ${isSent ? '-' : '+'}₹${txn.amount}
-                                    </span>
-                                    <span class="txn-status">${statusIcon}</span>
-                                </div>
+                        // return `
+                        //     <div class="transaction-item ${txn.status.toLowerCase()}">
+                        //         <div class="txn-left">
+                        //             <span class="txn-type">${isSent ? '📤 Sent' : '📥 Received'}</span>
+                        //             <span class="txn-party">${isSent ? txn.receiver : txn.sender}</span>
+                        //         </div>
+                        //         <div class="txn-right">
+                        //             <span class="txn-amount ${isSent ? 'debit' : 'credit'}">
+                        //                 ${isSent ? '-' : '+'}₹${txn.amount}
+                        //             </span>
+                        //             <span class="txn-status">${statusIcon}</span>
+                        //         </div>
+                        //     </div>
+                        // `;
+                        const txnTime = formatDateTime(txn.timestamp || txn.date);
+
+                    return `
+                        <div class="transaction-item ${txn.status.toLowerCase()}">
+                            <div class="txn-left">
+                                <span class="txn-type">${isSent ? '📤 Sent' : '📥 Received'}</span>
+                                <span class="txn-party">${isSent ? txn.receiver : txn.sender}</span>
                             </div>
-                        `;
+
+                            <div class="txn-right">
+                                <span class="txn-amount ${isSent ? 'debit' : 'credit'}">
+                                    ${isSent ? '-' : '+'}₹${txn.amount}
+                                </span>
+                                <span class="txn-time">${txnTime}</span>
+                            </div>
+                        </div>
+                    `;
+
                     }).join('');
                     
                     document.getElementById('transactionsList').innerHTML = html;
@@ -362,6 +393,13 @@ function hideBalance() {
 //         alert("Available Balance: " + document.getElementById("balanceAmount").textContent);
 //     }, 2000);
 // }
+function logout() {
+    if (!confirm("Do you want to logout?")) return;
+
+    localStorage.clear();
+    window.location.href = "index.html";
+}
+
 
     </script>
     <!-- PIN MODAL -->
