--- a/client-side/index.html
+++ b/client-side/index.html
@@ -46,15 +46,7 @@
             <div class="auth-footer">
                 <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
             </div>
-
-            <div class="demo-credentials">
-                <p><strong>Demo Credentials:</strong></p>
-                <p>Mobile: 9876543210</p>
-                <p>PIN: 1234</p>
-            </div>
-        </div>
-    </div>
-
+ 
     <div id="loadingOverlay" class="loading-overlay">
         <div class="spinner"></div>
         <p>Logging in...</p>
@@ -64,3 +56,123 @@
     <script src="js/auth.js"></script>
 </body>
 </html>
+
+
+    <style>
+        
+        body {
+            margin: 0;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont;
+            background: #f5f6fa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .auth-container {
+            width: 100%;
+            max-width: 420px;
+            padding: 16px;
+        }
+
+        .auth-card {
+            background: #fff;
+            border-radius: 18px;
+            padding: 28px 24px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+        }
+
+        .auth-header h1 {
+            font-size: 1.9rem;
+            margin: 0;
+        }
+
+        .auth-header p {
+            margin-top: 6px;
+            color: #666;
+            font-size: 0.95rem;
+        }
+
+        .form-group {
+            margin-bottom: 18px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 6px;
+            font-size: 0.85rem;
+            color: #444;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 14px 16px;
+            border-radius: 14px;
+            border: 1px solid #ddd;
+            font-size: 1rem;
+            outline: none;
+            transition: border-color 0.2s;
+        }
+
+        .form-group input:focus {
+            border-color: #6739ff; /* PhonePe-like */
+        }
+
+        .btn-primary {
+            background: linear-gradient(135deg, #6739ff, #4a23d4);
+            color: #fff;
+            border: none;
+            border-radius: 14px;
+            padding: 14px;
+            font-size: 1rem;
+            font-weight: 500;
+            cursor: pointer;
+        }
+
+        .btn-primary:active {
+            transform: scale(0.98);
+        }
+
+        .auth-footer {
+            margin-top: 18px;
+            text-align: center;
+            font-size: 0.9rem;
+        }
+
+        .auth-footer a {
+            color: #6739ff;
+            font-weight: 500;
+            text-decoration: none;
+        }
+
+        /* Loader (unchanged functionality) */
+        .loading-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(255,255,255,0.8);
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+        }
+
+        .loading-overlay.active {
+            display: flex;
+        }
+
+        .spinner {
+            width: 38px;
+            height: 38px;
+            border: 4px solid #eee;
+            border-top: 4px solid #6739ff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+        
+    </style>
