--- a/client-side/pay.html
+++ b/client-side/pay.html
@@ -26,22 +26,7 @@
                         maxlength="10"
                     >
                 </div>
-
-                <!-- <div class="form-group">
-                    <label>Amount (Max ₹10,000)</label>
-                    <div class="amount-input-wrapper">
-                        <span class="currency-symbol">₹</span>
-                        <input 
-                            type="number" 
-                            id="amount" 
-                            placeholder="0.00" 
-                            max="10000"
-                            step="0.01"
-                        >
-                    </div>
-                </div> -->
-
-                <div class="amount-card">
+                 <div class="amount-card">
     <span class="currency">₹</span>
     <input 
         type="number" 
@@ -93,7 +78,7 @@
                     <input type="hidden" id="pinInput" maxlength="4">
                 </div>
 
-                <div class="pin-keypad">
+                <!-- <div class="pin-keypad">
                     <button class="pin-key" onclick="addPinDigit('1')">1</button>
                     <button class="pin-key" onclick="addPinDigit('2')">2</button>
                     <button class="pin-key" onclick="addPinDigit('3')">3</button>
@@ -106,14 +91,45 @@
                     <button class="pin-key pin-key-empty"></button>
                     <button class="pin-key" onclick="addPinDigit('0')">0</button>
                     <button class="pin-key pin-key-del" onclick="deletePinDigit()">⌫</button>
+                </div> -->
+
+                <!-- <button class="btn btn-secondary btn-full" onclick="backToStep1()">
+                    Back
+                </button>
+            </div>
+        </div>
+    </div> -->
+    <div class="pin-keypad">
+                    <button class="pin-key" onclick="addPinDigit('1')">1</button>
+                    <button class="pin-key" onclick="addPinDigit('2')">2</button>
+                    <button class="pin-key" onclick="addPinDigit('3')">3</button>
+
+                    <button class="pin-key" onclick="addPinDigit('4')">4</button>
+                    <button class="pin-key" onclick="addPinDigit('5')">5</button>
+                    <button class="pin-key" onclick="addPinDigit('6')">6</button>
+
+                    <button class="pin-key" onclick="addPinDigit('7')">7</button>
+                    <button class="pin-key" onclick="addPinDigit('8')">8</button>
+                    <button class="pin-key" onclick="addPinDigit('9')">9</button>
+
+                    <!-- ❌ DELETE (LEFT) -->
+                    <button class="pin-key pin-key-del" onclick="deletePinDigit()">⌫</button>
+
+                    <!-- 0 (CENTER) -->
+                    <button class="pin-key" onclick="addPinDigit('0')">0</button>
+
+                    <!-- ✅ PAY (RIGHT) -->
+                    <button id="payBtn" class="pin-key pay-key" onclick="initiatePayment()" disabled>
+                        Pay
+                    </button>
                 </div>
 
+                <!-- BACK BUTTON (outside keypad – correct) -->
                 <button class="btn btn-secondary btn-full" onclick="backToStep1()">
                     Back
                 </button>
             </div>
         </div>
-    </div>
 
     <div id="loadingOverlay" class="loading-overlay">
         <div class="spinner"></div>
